# Trading-Bot-on-Binance-Futures-Testnet

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  test_backend.py
bot/: __init__.py  client.py  logging_config.py  orders.py  validators.py
tests/: conftest.py  test_client.py  test_orders.py  test_validators.py
