[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_bot"
version = "0.1.0"
description = "Binance Futures Testnet Trading Bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-binance",
    "python-dotenv",
    "typer",
    "rich",
    "colorlog"
]
